[metadata]
name = proxcat
version = attr: src.__version__
author = aisuneko
author_email = iceneko@protonmail.ch
maintainer = aisuneko
maintainer_email = iceneko@protonmail.ch
description = local htop-like status monitor for remote Proxmox VE servers
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = proxmox, proxmoxer, PVE, status, monitor
license = MIT
url = https://github.com/aisuneko/proxcat
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: System Administrators
    Environment :: Console :: Curses
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Monitoring

[options]
packages = src
install_requires =
    proxmoxer

[options.entry_points]
console_scripts =
    proxcat = src.main:start